force-app/main/default/objects/Custom_Client_Team__c/Custom_Client_Team__c.object-meta.xml
<CustomObject>
    <label>Client Team</label>
    <nameField>
        <displayFormat>Client-{0000}</displayFormat>
        <label>Client Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>