force-app/main/default/objects/Custom_Client_Team__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Custom_Client_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>