force-app/main/default/objects/Custom_Client_Team__c/fields/AccountUserId__c.field-meta.xml
<CustomField>
    <fullName>AccountUserId__c</fullName>
    <formula>Account__r.Id+&apos;#&apos;+Team_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountUserId</label>
    <type>Text</type>
</CustomField>