force-app/main/default/objects/Custom_Client_Team__c/fields/Case_Access__c.field-meta.xml
<CustomField>
    <fullName>Case_Access__c</fullName>
    <label>Case Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
                <default>true</default>
                <label>Read Only</label>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>