force-app/main/default/objects/Custom_Client_Team__c/fields/Client_Access__c.field-meta.xml
<CustomField>
    <fullName>Client_Access__c</fullName>
    <label>Client Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Access</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
                <default>true</default>
                <label>Read/Write</label>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>