force-app/main/default/objects/Custom_Client_Team__c/fields/Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to specify the Client Coordinator in the Service Team</description>
    <inlineHelpText>Is this Client Team Member the Client Coordinator?</inlineHelpText>
    <label>CC</label>
    <type>Checkbox</type>
</CustomField>