force-app/main/default/objects/Custom_Client_Team__c/fields/Client_Coordinator_BM__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator_BM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enh#096 - Indicates the client coordinator business manager.</description>
    <label>CC BM</label>
    <type>Checkbox</type>
</CustomField>