force-app/main/default/objects/Custom_Client_Team__c/fields/Client_Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Client_Managed_By__c</fullName>
    <formula>TEXT(Account__r.Client_Managed_By__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Managed By</label>
    <type>Text</type>
</CustomField>