force-app/main/default/objects/Custom_Client_Team__c/fields/Client_Role__c.field-meta.xml
<CustomField>
    <fullName>Client_Role__c</fullName>
    <label>Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>BCC Account Analyst</fullName>
            </value>
            <value>
                <fullName>BCC Business Development Manager</fullName>
            </value>
            <value>
                <fullName>BCC CSU Agent</fullName>
            </value>
            <value>
                <fullName>BCC CSU Manager</fullName>
            </value>
            <value>
                <fullName>BCC Ecosystem Manager</fullName>
            </value>
            <value>
                <fullName>BCC Head Trade Sales</fullName>
            </value>
            <value>
                <fullName>BCC Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>BCC Product Specialist</fullName>
            </value>
            <value>
                <fullName>BCC Relationship Manager</fullName>
            </value>
            <value>
                <fullName>BCC Service Manager</fullName>
            </value>
            <value>
                <fullName>BCC Trade Finance Manager</fullName>
            </value>
            <value>
                <fullName>BCC Trade Sales Manager</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Client Analyst</fullName>
            </value>
            <value>
                <fullName>Credit Officer</fullName>
            </value>
            <value>
                <fullName>Credit Risk</fullName>
            </value>
            <value>
                <fullName>Dedicated Service Consultant</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Executive Stakeholder</fullName>
            </value>
            <value>
                <fullName>Global Transaction Banker</fullName>
            </value>
            <value>
                <fullName>GM Champion</fullName>
            </value>
            <value>
                <fullName>GM Client Manager</fullName>
            </value>
            <value>
                <fullName>GM Execution Manager</fullName>
            </value>
            <value>
                <fullName>GM Regional Head</fullName>
            </value>
            <value>
                <fullName>IB Champion</fullName>
            </value>
            <value>
                <fullName>Investor Services Manager</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Legal Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>