force-app/main/default/objects/Custom_Client_Team__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <description>Does this Client Team Member play a Core Role?</description>
    <formula>IF((
	ISPICKVAL(Client_Role__c, &apos;BCC Relationship Manager&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;Credit Risk&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;Executive Sponsor&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;GM Champion&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;IB Champion&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;Manager Client Coverage&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;Sector/Client Coverage Head&apos;) ||
	ISPICKVAL(Client_Role__c, &apos;TPS Champion&apos;) ||
        (Client_Coordinator__c)
	), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does this Client Team Member play a Core Role?</inlineHelpText>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>