force-app/main/default/objects/Custom_Client_Team__c/fields/Current_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Role__c</fullName>
    <formula>Team_Member__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Role</label>
    <type>Checkbox</type>
</CustomField>