force-app/main/default/objects/Custom_Client_Team__c/fields/GTB__c.field-meta.xml
<CustomField>
    <fullName>GTB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-2017: As a user who has an ability to add a team member to CST, I want to assign dual roles to a TPS member of the Client Service Teams in order to report make sure that right roles are assigned to right people.</description>
    <inlineHelpText>Is this Client Team Member the Global Transaction Banker for this Client?</inlineHelpText>
    <label>GTB</label>
    <type>Checkbox</type>
</CustomField>