force-app/main/default/objects/Custom_Client_Team__c/fields/Opportunity_Access__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Access__c</fullName>
    <label>Opportunity Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>