force-app/main/default/objects/Custom_Client_Team__c/fields/SourceFlag__c.field-meta.xml
<CustomField>
    <fullName>SourceFlag__c</fullName>
    <defaultValue>11</defaultValue>
    <description>Flag to determine the Origin and intention of the operation
10 - Standard Save Button
11 - API Mode
12 - Replace Operation</description>
    <label>SourceFlag</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>