force-app/main/default/objects/Custom_Client_Team__c/fields/Team_Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_First_Name__c</fullName>
    <formula>Team_Member__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member First Name</label>
    <type>Text</type>
</CustomField>