force-app/main/default/objects/Custom_Client_Team__c/fields/TeamRoleSortValue__c.field-meta.xml
<CustomField>
    <fullName>TeamRoleSortValue__c</fullName>
    <description>CST Phase (3)  - Core team role ranking values .</description>
    <label>Sort</label>
    <length>20</length>
    <type>Text</type>
</CustomField>