force-app/main/default/objects/Custom_Client_Team__c/fields/Temp_Source_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Source_Org_Id__c</fullName>
    <description>SFP-10747 [s] This field is used to store the PBB legacy object id.</description>
    <externalId>true</externalId>
    <label>Temp Source Org Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>