force-app/main/default/objects/Custom_Client_Team__c/fields/Top_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Top_Client_Id__c</fullName>
    <formula>IF( Account__r.Parent.ParentId != null, Account__r.Parent.ParentId,
IF(Account__r.ParentId != null, Account__r.ParentId, Account__c))</formula>
    <label>Top Client Id</label>
    <type>Text</type>
</CustomField>