force-app/main/default/objects/Custom_Client_Team__c/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <formula>Team_Member__r.Country</formula>
    <label>User Country</label>
    <type>Text</type>
</CustomField>