force-app/main/default/objects/Custom_Client_Team__c/fields/User_Division__c.field-meta.xml
<CustomField>
    <fullName>User_Division__c</fullName>
    <formula>TEXT(Team_Member__r.User_Division__c)</formula>
    <label>User Division</label>
    <type>Text</type>
</CustomField>