force-app/main/default/objects/Custom_Client_Team__c/fields/User_Division_Coordinator_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Division_Coordinator_Key__c</fullName>
    <formula>IF( Client_Coordinator__c == true, &apos;CC &apos;,IF( Client_Coordinator_BM__c == true, &apos;CCBM &apos;, &apos;&apos; )) +  User_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Division Coordinator Key</label>
    <type>Text</type>
</CustomField>