force-app/main/default/objects/Custom_Client_Team__c/fields/User_Franco__c.field-meta.xml
<CustomField>
    <fullName>User_Franco__c</fullName>
    <formula>Text(Team_Member__r.User_Franco__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Franco</label>
    <type>Text</type>
</CustomField>