force-app/main/default/objects/Custom_Client_Team__c/fields/UserProfileId__c.field-meta.xml
<CustomField>
    <fullName>UserProfileId__c</fullName>
    <formula>Team_Member__r.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserProfileId</label>
    <type>Text</type>
</CustomField>