force-app/main/default/objects/Custom_Client_Team__c/fields/Visible_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[SFP-6763] - indicates if a client team member is part of the client service team</description>
    <inlineHelpText>Is this person a part of the client service team visible to the client.</inlineHelpText>
    <label>Visible to Client</label>
    <type>Checkbox</type>
</CustomField>