force-app/main/default/objects/Custom_Client_Team__c/recordTypes/For_Admin.recordType-meta.xml
<RecordType>
    <fullName>For_Admin</fullName>
    <active>true</active>
    <description>This record type if defined only for Admin profiles to allow them to look at all the access values</description>
    <label>For_Admin</label>
</RecordType>