force-app/main/default/objects/Custom_Client_Team__c/recordTypes/NON_Admin.recordType-meta.xml
<RecordType>
    <fullName>NON_Admin</fullName>
    <active>true</active>
    <description>This record type is for profiles other than System Admin to grant them specific Access values</description>
    <label>NON_Admin</label>
</RecordType>