force-app/main/default/objects/Custom_Client_Team__c/validationRules/CC_and_CC_BM_cannot_be_the_same_user.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_and_CC_BM_cannot_be_the_same_user</fullName>
    <active>true</active>
    <description>CC and CC BM cannot be the same user</description>
    <errorConditionFormula>Client_Coordinator__c = True &amp;&amp; Client_Coordinator_BM__c = True</errorConditionFormula>
    <errorMessage>CC and CC BM cannot be the same user</errorMessage>
</ValidationRule>