force-app/main/default/objects/Custom_Client_Team__c/validationRules/GTB_Flag_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GTB_Flag_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(GTB__c,
 NOT(ISPICKVAL(Team_Member__r.User_Division__c, &quot;Transactional Products and Services&quot;)))</errorConditionFormula>
    <errorMessage>GTB (Global Transaction Banker) flag cannot be checked against the team member who is not from Transactional Products and Services</errorMessage>
</ValidationRule>