force-app/main/default/objects/Custom_Client_Team__c/validationRules/Not_Allow_to_be_CC_and_CCBM.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allow_to_be_CC_and_CCBM</fullName>
    <active>true</active>
    <errorConditionFormula>Client_Coordinator__c
&amp;&amp; Client_Coordinator_BM__c</errorConditionFormula>
    <errorMessage>The Client Coordinator(CC) and Client Coordinator BM(CC BM) cannot be the same user in the Client Team.</errorMessage>
</ValidationRule>