force-app/main/default/objects/Custom_Client_Team__c/validationRules/Only_SysAdmin_For_GM_Client_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_SysAdmin_For_GM_Client_Manager</fullName>
    <active>true</active>
    <description>SGPRT-837 - Validation to check that only System Admins can add team member with GM Client Manager role.</description>
    <errorConditionFormula>OR(
  AND(
    ISCHANGED( Client_Role__c ),
    $Profile.Name != &apos;System Administrator&apos;,
    OR(
      PRIORVALUE( Client_Role__c ) = &apos;GM Client Manager&apos;,
      ISPICKVAL(Client_Role__c, &apos;GM Client Manager&apos;) 
    )
  ),
  AND(
    ISNEW(),
    $Profile.Name != &apos;System Administrator&apos;,
    ISPICKVAL(Client_Role__c, &apos;GM Client Manager&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Insufficient Privileges - You do not have the level of access necessary to Add or Delete GM Client Manager on this Client. Please contact the CRM Helpdesk (CRMSalesforce@standardbank.co.za) for assistance.</errorMessage>
</ValidationRule>