force-app/main/default/objects/Custom_Client_Team__c/validationRules/Only_SysAdmin_For_GM_Regional_Head.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_SysAdmin_For_GM_Regional_Head</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
    ISCHANGED( Client_Role__c ),
    $Profile.Name != &apos;System Administrator&apos;,
    OR(
      PRIORVALUE( Client_Role__c ) = &apos;GM Regional Head&apos;,
      ISPICKVAL(Client_Role__c, &apos;GM Regional Head&apos;) 
    )
  ),
  AND(
    ISNEW(),
    $Profile.Name != &apos;System Administrator&apos;,
    ISPICKVAL(Client_Role__c, &apos;GM Regional Head&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Insufficient Privileges - You do not have the level of access necessary to Add or Delete a GM Regional Head on this Client. Please contact the CRM Helpdesk (CRMSalesforce@standardbank.co.za) for assistance.</errorMessage>
</ValidationRule>