force-app/main/default/objects/Custom_Client_Team__c/validationRules/Validation_of_CommB_User_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_of_CommB_User_Member</fullName>
    <active>true</active>
    <description>Improvement of EN-0989 which prevents add a BCC user to a CIB Client Service Team.</description>
    <errorConditionFormula>($Profile.Name &lt;&gt; &quot;Business Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;) &amp;&amp; (NOT(
OR(ISPICKVAL(Account__r.Primary_Relationship_Holder__c, &apos;Commercial Banking&apos;),
ISPICKVAL(Account__r.Primary_Relationship_Holder__c, &apos;Business Banking&apos;))) &amp;&amp; (ISPICKVAL(Team_Member__r.User_CIB_Global_Area__c, &apos;BCC&apos;)))</errorConditionFormula>
    <errorMessage>You cannot add a BCC user to a CIB Client Service Team, please contact CRM Helpdesk team if an exception is required.</errorMessage>
</ValidationRule>