force-app/main/default/objects/Custom_Client_Team__c/validationRules/Validation_of_non_CommB_and_Commb_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_of_non_CommB_and_Commb_Role</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(OR(ISPICKVAL(Account__r.Primary_Relationship_Holder__c, &apos;Commercial Banking&apos;),
ISPICKVAL(Account__r.Primary_Relationship_Holder__c, &apos;Business Banking&apos;))),
     NOT(ISPICKVAL(Team_Member__r.User_CIB_Global_Area__c, &apos;BCC&apos;)),
     OR( ISPICKVAL(Client_Role__c, &apos;BCC Relationship Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Portfolio Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Product Specialist&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Service Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Business Development Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC CSU Agent&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC CSU Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Ecosystem Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Account Analyst&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Head Trade Sales&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Trade Sales Manager&apos;),
         ISPICKVAL(Client_Role__c, &apos;BCC Trade Finance Manager&apos;)



       )
)</errorConditionFormula>
    <errorMessage>You cannot add a CIB user with a BCC Team role, please select a CIB team role (no BCC prefix)</errorMessage>
</ValidationRule>